<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="www.TechBazaar.pk.FBLoginActivity" >

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width= "wrap_content"
                android:textColor="#00FF00"
                android:layout_height="80dp"
                android:textSize="25sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/hello_world" />



            <Button
                android:id="@+id/button5"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignBaseline="@+id/button2"
                android:layout_alignBottom="@+id/button2"
                android:layout_alignLeft="@+id/button4"
                android:layout_marginTop="45dp"
                android:textColor="@color/black"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignLeft="@+id/button5"
                android:layout_below="@+id/button5"
                android:layout_marginTop="45dp"
                android:textColor="@color/black"
                android:text="@string/button6" />

            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignLeft="@+id/button1"
                android:layout_below="@+id/button1"
                android:layout_marginTop="45dp"
                android:textColor="@color/black"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignBaseline="@+id/button6"
                android:layout_alignBottom="@+id/button6"
                android:layout_alignRight="@+id/button2"
                android:textColor="@color/black"
                android:layout_marginTop="45dp"
                android:text="@string/button3" />

            <Button
                android:id="@+id/button4"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignBaseline="@+id/button1"
                android:layout_alignBottom="@+id/button1"
                android:layout_toRightOf="@+id/button1"
                android:textColor="@color/black"
                android:text="@string/button4" />

            <Button
                android:id="@+id/button1"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="121dp"
                android:textColor="@color/black"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button1"
                android:layout_below="@+id/textView1"
                android:textColor="@color/black"
                android:text="@string/connect" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/button6"
                android:layout_below="@+id/button6"
                android:layout_marginTop="76dp"
                android:textColor="@color/black"
                android:text="dhus!!!!" />
        </RelativeLayout>
    </ScrollView>>
</RelativeLayout>